--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: My website
-subtitle: This is where I will tell my friends way too much about me
+title: Hi,I'm MT
+subtitle: 喜欢听歌看电影，玩游戏，还希望自己以后能喜欢上跑步
 use-site-title: true
 ---
 
